--- a/dos33.html
+++ b/dos33.html
@@ -2923,7 +2923,7 @@ With that "legalese" out of the way ... enjoy the read!
 2670:18             216             CLC             ;INDICATE PROGRAM RUNNING
 2671:60             217             RTS
                     218 <a class='f' name='TR1'      >TR1         </a>EQU *
-2672:A5 D9          219             LDA $<span class='n'>D9</span>         ; GET INT RUN FLAG              ; <a class='magic' name='_'>magic nubmer</a>
+2672:A5 D9          219             LDA $<span class='n'>D9</span>         ; GET INT RUN FLAG              ; <a class='magic' name='_'>magic number</a>
 2674:30 F9          220             BMI TR0         ; BR IF RUN
 2676:68             221 <a class='f' name='NOTRUN'   >NOTRUN      </a>PLA             ;INDICATE PROGRAM NOT RUNNING
 2677:38             222             SEC             ; WITH CARRY SET.
