Added section 3.3 AppleWin Symbols for #3

--- a/dos33.html
+++ b/dos33.html
@@ -778,6 +778,7 @@ that overflow into this region -->
         <ul class="toc">
             <li>3.1 <a class='link' href='#Alphabetical'   >Symbols (Alphabetical)</a>         </li>
             <li>3.2 <a class='link' href='#Address'        >Symbols (Address)</a>              </li>
+            <li>3.3 <a class='link' href='#AppleWin'       >Symbols (AppleWin $9B00)</a>       </li>
         </ul>
         <li>4.0 Miscellaneous Information               </li>
         <ul class="toc">
