--- a/dos33.html
+++ b/dos33.html
@@ -5241,9 +5241,9 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                                                                                     ; your spidey sense should be tingling.
                                                                                     ; Translation: <i>I pulled this out of my ass -- </i>
                                                                                     ;              <i>because I didn't actually <b>measure</b> what is <b>needed</b>!"</i>
-33A4:01 0A 64       013 <a class='d' id='33A4' name="CVTAB" >CVTAB       </a>DFB 1,10,100    ; CONVERSION TABLE              ; Powers of 10; sadly Applesoft's DECTBL @ $<span class='n'>EE6C</span> is useless :-/
+33A4:01 0A 64       013 <a class='d' id='33A4' coords='3' name="CVTAB" >CVTAB       </a>DFB 1,10,100    ; CONVERSION TABLE              ; Powers of 10; sadly Applesoft's DECTBL @ $<span class='n'>EE6C</span> is useless :-/
                     014             MSC ON                                          ; Switch ASCII to Apple Text (high bit set)
-33A7:D4 C9 C1 C2    015 <a class='d' id='33A7' name="FTTAB" >FTTAB       </a>ASC "TIAB"      ; FILE TYPE CONVERSTION TABLE"  ; <a class='dumb'>File Types</a> You couldn't use file types that make <i>visual</i> hex editing easier??
+33A7:D4 C9 C1 C2    015 <a class='d' id='33A7' coords='-8' name="FTTAB" >FTTAB       </a>ASC "TIAB"      ; FILE TYPE CONVERSTION TABLE"  ; <a class='dumb'>File Types</a> You couldn't use file types that make <i>visual</i> hex editing easier??
                                                                                     ;     Type             Code  Dumb       Smart 
                                                                                     ;     Applesoft Basic  A     02 Ctrl-B  01 Ctrl-A
                                                                                     ;     Binary           B     04 Ctrl-D  02 Ctrl-B
