AppleWin symbol: BHERE1

--- a/dos33.html
+++ b/dos33.html
@@ -5837,7 +5837,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     233             BNE LUP1        ;=&gt; always                      </span>; &uarr; No, not always, 256 times
                     234             FIN                                             ; Patch incomplete! Where is the <span class='code'>RTS</span>??? Called from <a class='x' href='#SCNCMD'>SCNCMD</a>
                     235             SKP 1
-                    236 BHERE1      EQU &gt;*
+                    236 <a class='d' id='36B3' coords='74' name='BHERE1'>BHERE1      </a>EQU &gt;*
 36B3:00             237             DS $FD-BHERE1,0                                 ;[.. <a class='mem' name='_36B3' coords='74'>wastes</a> 74 bytes ($36FD-$36B3=$4A)
 36B4:00 00 00 00                                                                    ; ..
 36B8:00 00 00 00                                                                    ; ..
