--- a/dos33.html
+++ b/dos33.html
@@ -6048,13 +6048,13 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     421             DSECT
                     422 <a class='d' name='FILDIR'   >FILDIR      </a>EQU *                                               ;T12SF <a class='dumb' name='HNTDAFS6'>HNTDAFS #6</a>
                     423 <a class='d' name='FDUCDE'   >FDUCDE      </a>DS  1           ; FILE USE CODE                     ; [00] <a class='struct' name='_3800'>wastes</a> 1 byte -- never referenced! I presume <span class='code'>FILESYSTEM_TYPE_FILE EQU $1</span>
-                    424 <a class='d' name='FDLTRK'   >FDLTRK      </a>DS  1           ; LINK TO NEXT DIR TRACK            ; [01] e.g. $12 ($00 = none)
+                    424 <a class='d' name='FDLTRK'   >FDLTRK      </a>DS  1           ; LINK TO NEXT DIR TRACK            ; [01] e.g. $12 ($00 = none), see <a class='x' href='#RFDNXT'>RFDNXT</a>
                     425 <a class='d' name='FDLSEC'   >FDLSEC      </a>DS  1           ; LINK TO NEXT DIR SECTOR           ; [02] e.g. $0E ($00 = none)
                     426 <a class='d' name='FDNSA'    >FDNSA       </a>DS  1           ; NO SECTORS ALLOCATED              ; [03] <a class='struct' name='_3803'>wastes</a> 1 byte -- never referenced!
                     427 <a class='d' name='FDLSDL'   >FDLSDL      </a>DS  1           ; LAST SECTOR DATA LENGTH           ; [04] <a class='struct' name='_3804'>wastes</a> 1 byte -- never referenced!
                     428 <a class='d' name='FDFRS'    >FDFRS       </a>DS  2           ; 1ST RELATIVE SECTOR IN THIS DIR   ; [05] read by <a class='x' href='#RFDNL1'>RFDNL1</a> and <a class='x' href='#RDFDC'>RDFDC</a> in FMTRWIO
-<hr>                    429 <a class='d' name='FDSPAR'   >FDSPAR      </a>DS  5           ; SPARES                            ; [07] === Page <a class='page' name='page15'>15</a> ===
-                    430 ;
+<hr>                    429 <a class='d' name='FDSPAR'   >FDSPAR      </a>DS  5           ; SPARES                            ; [07] === Page <a class='page' name='page15'>15</a> === -- never referenced!
+                    430 ;                                                               ; <a class='struct' name='3800' coords='5'>wastes</a> 5 bytes on disk for EVERY catalog sector!
                     431 <a class='d' name='FDENT'    >FDENT       </a>DS  1           ; START OF FILE ENTRIES (122)       ; [0C]
                     432 <a class='e' name='FDTRK'    >FDTRK       </a>EQU 0           ; TRACK
                     433 <a class='e' name='FDSEC'    >FDSEC       </a>EQU 1           ; SECTOR
