--- a/dos33.html
+++ b/dos33.html
@@ -6181,7 +6181,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     114 *                      *
                     115 ************************
                     116 <a class='d' name='WTEMP'    >WRTEMP      </a>EQU $26         TEMP FOR DATA AT NBUF2,0.
-                    117 <a class='d' name='SLOTZ'    >SLOTZ       </a>EQU $27         SLOTNUM IN Z-PAG LOC.
+<hr>                    117 <a class='d' name='SLOTZ'    >SLOTZ       </a>EQU $27         SLOTNUM IN Z-PAG LOC.           ; === Page <a class='page'. name='page26'>26</a> ===
                     118 <a class='d' name='SLOTABS'  >SLOTABS     </a>EQU $678        SLOTNUM IN NON-ZPAG LOC.
                     119 *
                     120 ************************
