Added wasted disk bytes 3B00

--- a/dos33.html
+++ b/dos33.html
@@ -7022,7 +7022,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     198 *                         *                                 ; code at <a class="file" href="#WRITRTN">WRITRTN</a>, Line #<a class='line' href='WRITRTN.080'>>80</a> needs fixing up.
                     199 ***************************                                 ;
                     200 *                                                           ;
-3B00:00 00 00 00    201 <a class='d' id='3B00' name='NBUF1'       >NBUF1       </a>DS 256,0        ;NBUF1                          ; === <a class='ts' href='#T0S5'>T0S5</a> === <a class='disk'>disk</a> sector wasted with zeroes
+3B00:00 00 00 00    201 <a class='d' id='3B00' name='NBUF1'       >NBUF1       </a>DS 256,0        ;NBUF1                          ; === <a class='ts' href='#T0S5'>T0S5</a> === <a class='disk' coords='256'>disk</a> sector wasted with zeroes
 3B04:00 00 00 00                                                                    ; *sigh* Let's waste an *entire* sector
 3B08:00 00 00 00                                                                    ; with 342 disk nibbles of raw $96 nibbles
 3B0C:00 00 00 00                                                                    ; PLUS the time decoding it
