Add wasted disk bytes 3C00

--- a/dos33.html
+++ b/dos33.html
@@ -7043,7 +7043,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3BF0:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 ;     0  1  2  3  4  5  6  7  8  9  A  B  C  D  E  F
 
-3C00:00 00 00 00    202 <a class="d" name="NBUF2"       >NBUF2       </a>DS  86,0        ;NBUF2                          ;  === <a class='ts' href='#T0S6'>T0S6</a> ===
+3C00:00 00 00 00    202 <a class="d" name="NBUF2"       >NBUF2       </a>DS  86,0        ;NBUF2                          ;  === <a class='ts' href='#T0S6'>T0S6</a> === <a class='disk' coords='86'>disk</a> sector wasted bytes
 3C04:00 00 00 00                                                                    ; *sigh* more wasted disk space
 3C08:00 00 00 00                                                                    ; pack code THEN data
 3C0C:00 00 00 00                                                                    ; as interleaving it just
